# socket_wrapper

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  ConfigureChecks.cmake  DefineOptions.cmake  README  README.install  TODO  config.h.cmake  socket_wrapper-config.cmake.in  socket_wrapper.pc.cmake
cmake/Modules/: DefineCMakeDefaults.cmake  DefineCompilerFlags.cmake  DefineInstallationPaths.cmake
doc/: CMakeLists.txt  README  socket_wrapper.1  socket_wrapper.1.txt
example/: openssh.sh
src/: CMakeLists.txt  socket_wrapper.c  socket_wrapper.h
tests/: CMakeLists.txt  README  echo_srv.c  test_close_failure.c  test_echo_tcp_bind.c  test_echo_tcp_connect.c  test_echo_tcp_get_peer_sock_name.c  test_echo_tcp_sendmsg_recvmsg.c  test_echo_tcp_socket.c  test_echo_tcp_socket_options.c  test_echo_tcp_write_read.c  test_echo_tcp_writev_readv.c  test_echo_udp_send_recv.c  test_echo_udp_sendmsg_recvmsg.c  test_echo_udp_sendto_recvfrom.c  test_ioctl.c  test_max_sockets.c  test_sendmsg_recvmsg_fd.c  test_swrap_unit.c  test_tcp_dup2.c  test_tcp_listen.c  testsuite.c  torture.c  torture.h
